O3-4716: Migrate to Drools 9