@@ -1,19 +1,20 @@
 package org.openmrs.module.drools;
 
-import java.util.List;
-import java.util.Map;
-
 import org.kie.api.io.ResourceType;
 import org.openmrs.module.drools.api.RuleProvider;
 import org.openmrs.module.drools.session.RuleSessionConfig;
-
 import org.openmrs.module.drools.session.ExternalEvaluator;
+
+import java.util.Collections;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
 
 public class TestRuleProviderLoader implements RuleProviderLoader {
 
     @Override
     public List<RuleProvider> loadRuleProviders() {
-        return List.of(new TestRuleProvider());
+        return Collections.singletonList(new TestRuleProvider());
     }
 
     class TestRuleProvider implements RuleProvider {
@@ -25,18 +26,18 @@ public class TestRuleProviderLoader implements RuleProviderLoader {
 
         @Override
         public List<RuleResource> getRuleResources() {
-            return List.of(new RuleResource("Test Rules", "rules/age_rules.xlsx", ResourceType.DTABLE));
+            return Collections.singletonList(new RuleResource("Test Rules", "org/openmrs/module/drools/age_rules.drl.xlsx", ResourceType.DTABLE));
         }
 
         @Override
         public List<RuleSessionConfig> getSessionConfigs() {
-            return List.of(
-                    new RuleSessionConfig("Test session", true, true, null, null, List.of(new TestEventListener())));
+            return Collections.singletonList(
+                    new RuleSessionConfig("Test session", true, true, null, null, Collections.singletonList(new TestEventListener())));
         }
 
         @Override
         public Map<String, ExternalEvaluator> getExternalEvaluators() {
-            return Map.of();
+            return new HashMap<>();
         }
     }
 }
